fix checkbox spacing on recipe list

--- a/src/app/recipelist/recipelist.page.scss
+++ b/src/app/recipelist/recipelist.page.scss
@@ -1,3 +1,7 @@
 .highlight {
   background-color: #DDDDDD;
 }
+
+ion-checkbox {
+    margin-right: 8px;
+}
